# sfnx-terminal

./: .gitattributes  PKGBUILD  README.md  pyproject.toml  requirements.txt  setup.py  sfnx.spec
sfnx/: __main__.py  crud.py  db.py  main.py  security.py
sfnx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
