[tool.poetry]
name = "sfnx"
version = "0.1.0"
description = "`sfnx` is a minimal terminal-based password manager."
authors = ["Mohit <themohitnair@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "^23.1.0"
cryptography = "^43.0.1"
sqlmodel = "^0.0.22"
typer = "^0.12.5"
rich = "^13.8.1"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sfnx = "sfnx.main:app"
